增加生成styles的功能
